# abridge-hackathon

./: .gitignore  README.md  app.py  pyproject.toml
eval/: README.md
eval/seeded-ehr/: 01573895-ehr.json  1ba8eeb9-ehr.json  1be66dc9-ehr.json  256bea3d-ehr.json  25fb1227-ehr.json  374e68b2-ehr.json  3a3a1f26-ehr.json  40cb7be2-ehr.json  4b4735a2-ehr.json  4c893b3e-ehr.json  5e93dd7e-ehr.json  693a049b-ehr.json  6b716621-ehr.json  6d4fd363-ehr.json  73043f9e-ehr.json  74919836-ehr.json  7bd9e5b0-ehr.json  966e9818-ehr.json  a3292ec4-ehr.json  b342f27e-ehr.json  b504cdf2-ehr.json  be1b73f7-ehr.json  c2cbc55e-ehr.json  d57244c4-ehr.json  e1a7c2af-ehr.json
partner-provided-docs/seeded-stuff/: seeding-manifest.json
sentinel/: __init__.py  core.py
static/: app.js  styles.css
templates/: index.html
tests/: test_core.py
